--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div id="background">
+    <div class="main">
+      <img id="phone" src="images/phones.png" alt="phone" />
+      <span>
+        <section class="brandAndLogIn">
+          <img id="brand" src="images/brand.png" alt="brand" />
+          <section id="logIn"> <img id="home" src="images/home.png" alt="" /> <a id="logInLink" href="#"> <b>Log in</b> </a> </section>
+        </section>
+        <section class="textAndButton">
+            <h1>Capture and Share <br />the World's Moments</h1>
+            <p id="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</p> <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+  
+            <div class="stores">
+                <a href="#" id="iphone"><img src="images/badge-iphone.png" /></a>
+                <a href="#"><img src="images/badge-android.png" /></a>
+            </div>
+        </section>
+      </span>
+    </div>
+    <ul class="footer">
+      <il class="footerSections">ABOUT US</il>
+      <il class="footerSections">SUPPORT</il>
+      <il class="footerSections">BLOG</il>
+      <il class="footerSections">PRESS</il>
+      <il class="footerSections">API</il>
+      <il class="footerSections">JOBS</il>
+      <il class="footerSections">PRIVACY</il>
+      <il class="footerSections">TERMS</il>
+      <il class="copy footerSections">&copy; 2014 Instagram</il>
+    </ul>
+  </div> 
   </body>
 </html>
